[package]
name = "bevy_basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_sprite",
] }
bevy_ecs_ldtk = "0.9.0"
bevy_ecs_ldtk_macros = "0.9.0"
bevy_ecs_tilemap = "0.12.0"
bevy_rapier2d = "0.25.0"

[features]
default = ["derive", "render", "internal_levels"]
derive = ["bevy_ecs_ldtk_macros"]
atlas = ["bevy_ecs_tilemap/atlas"]
render = ["bevy_ecs_tilemap/render"]
internal_levels = []
external_levels = []
