[package]
name = "bevy_basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["wav"] }
bevy_ecs_tilemap = "0.12"
bevy_asset_loader = { version = "0.20.1", features = ["2d"] }
bevy-inspector-egui = { version = "0.22", optional = true }
leafwing-input-manager = "0.13.3"

# TODO: update it when a new release compatible with bevy 13.
bevy_ecs_ldtk = { git = "https://github.com/trouv/bevy_ecs_ldtk" }

# [features]
# default = ["render", "internal_levels"]
# derive = ["bevy_ecs_ldtk_macros"]
# atlas = ["bevy_ecs_tilemap/atlas"]
# render = ["bevy_ecs_tilemap/render"]
# internal_levels = []
# external_levels = []
# [patch.crates-io]
# bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap/", branch = "main" }


# TODO: should be removed when a new release compatible with bevy 13.
[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
